# email-triage-env

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml
env/: email_env.py
server/: app.py
